# europa1400-manager

./: .gitignore  .pre-commit-config.yaml  .releaserc  AGENTS.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  pyinstaller.spec  pyproject.toml
.github/workflows/: publish.yml  quality.yml  release.yml
europa1400_manager/: __main__.py  __main_gui__.py  async_typer.py  cli.py  config.py  const.py  database.py  game_metadata.py  gui.py  models.py  utils.py
europa1400_manager/modules/: base_module.py  base_module_gui.py  config_module.py  config_module_gui.py  info_module.py  info_module_gui.py  license_module.py  license_module_gui.py  patch_module.py  patch_module_gui.py  tool_module.py
europa1400_manager/patches/: base_patch.py  ddrawcompat_patch.py
europa1400_manager/tools/: base_tool.py  ddrawcompat_tool.py
scripts/: generate_notice.ps1  generate_notice.py  generate_notice.sh
tests/: test_game_metadata.py
